--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "reveal.js",
   "version": "3.0.0",
-  "description": "The HTML Presentation Framework",
-  "homepage": "http://lab.hakim.se/reveal-js",
+  "description": "BIM Programming Madrid",
+  "homepage": "https://github.com/jeremytammik/bim_programming_madrid",
   "subdomain": "revealjs",
   "scripts": {
     "test": "grunt test",
     "start": ""
   },
   "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "http://hakim.se"
+    "name": "Jeremy Tammik",
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git@github.com:jeremytammik/bim_programming_madrid.git"
   },
   "engines": {
     "node": "~0.10.0"
@@ -42,7 +40,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/hakimel/reveal.js/blob/master/LICENSE"
+      "url": "https://github.com/jeremytammik/bim_programming_madrid/blob/gh-pages/LICENSE"
     }
   ]
 }
