--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": ""
   },
   "author": {
-    "name": "Jeremy Tammik",
+    "name": "Jeremy Tammik"
   },
   "repository": {
     "type": "git",
